--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,269 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+
 *, ::after, ::before {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 body {
     width: 100%;
     height: 100vh;
     overflow: hidden;
+}
+
+.top-panel {
+    background-color: #000;
+    display: grid;
+    width: 100%;
+    height: 30px;
+    line-height: 40px;
+    grid-template-columns: 33.33% 33.33% 33.33%;
+    grid-template-areas: 
+    "left center right"
+    ;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+/*----------- PANEL TOP -----------*/
+
+/*GENERAL*/
+
+.activities-button,
+.current-app-button,
+.notifications-panel-button,
+.setting-button {
+    height: 25px;
+    border-radius: 40px;
+    padding: 0 10px;
+    border: none;
+    color: #fff;
+    background-color: #000;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.activities-button:hover,
+.current-app-button:hover,
+.notifications-panel-button:hover,
+.setting-button:hover,
+.activities-button.active,
+.current-app-button.active,
+.notifications-panel-button.active,
+.setting-button.active {
+    background-color: #3c3a3a;
+}
+
+/*LEFT COMPONENTS*/
+
+.left-components-section {
+    grid-area: left;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0 10px;
+    gap: 10px;
+}
+
+.current-app-button {
+    display: none;
+}
+
+.current-app-button.active {
+    display: block;
+}
+
+/*CENTRAL COMPONENTS*/
+.central-components-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    grid-area: center;
+}
+
+.notifications-container {
+    display: none;
+    width: 700px;
+    height: 400px;
+    background-color: #000;
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    border: 2px solid #3c3a3a;
+    border-radius: 10px;
+    transition: all 0.5s;
+}
+
+.notifications-container.show-notifications {
+    display: block;
+    top: 40px;
+}
+
+.notification-panel {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
+}
+
+.notification-left-panel {
+    width: 400px;
+    height: 100%;
+    border-radius: 5px;
+    display: grid;
+    grid-template-rows: 90% 10%;
+    grid-template-areas: 
+    "notifications-panel"
+    "options-left-notifications"
+    ;
+    overflow: hidden;
+    border-right: 1px solid #3c3a3a;
+    padding: 0 10px 10px 0;
+}
+
+.options-left-notifications {
+    grid-area: options-left-notifications;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.scroll-section-panel {
+    grid-area: notifications-panel;
+    width: 100%;
+    height: 100%;
+}
+
+.no-notifications-panel {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 100px;
+    color: #3c3a3a;
+}
+
+.subtitle-no-notifications {
+    font-size: 20px;
+    color: #3c3a3a;
+}
+
+.do-not-disturb-section {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    gap: 10px;
+}
+
+.clear-section {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.clear-notifications {
+    background-color: #3c3a3a;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px;
+    color: #fff;
+    width: 90px;
+    height: 30px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+.clear-notifications:hover {
+    background-color: #4a4a4a;
+}
+
+.subtitle-do-not-disturb {
+    color: #fff;
+    font-size: 14px;
+}
+
+#switch {
+    opacity: 0;
+    width: 0px;
+    height: 0px;
+}
+
+.switch-section {
+    background-color: #4a4a4a;
+    width: 60px;
+    height: 30px;
+    border-radius: 40px;
+    display: inline-block;
+    position: relative;
+    transition: all 0.5s;
+}
+
+.switch-section::after {
+    content: '';
+    width: 25px;
+    height: 25px;
+    background-color: #fff;
+    position: absolute;
+    top: 2.5px;
+    left: 2.5px;
+    border-radius: 30px;
+    transition: all 0.5s;
+}
+
+.do-not-disturb-section > input[type='checkbox']:checked + .switch-section::after {
+    transform: translateX(30px);
+}
+
+.do-not-disturb-section > input[type='checkbox']:checked + .switch-section {
+    background-color: #7200d6;
+}
+
+/*RIGHT COMPONENTS*/
+.right-components-section {
+    grid-area: right;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 10px;
+}
+
+.disabled-screen {
+    display: none;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+    z-index: 1;
+}
+
+.disabled-screen.active {
+    display: block;
 }
